--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,38 @@ code {
   font-size: 11px;
   border-radius: 10px;
 }
+
+#showcase {
+  background: url("./images/bg-header.png") no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 750px;
+  position: relative;
+  overflow: hidden;
+}
+#showcase .showcase-overlay {
+  position: absolute;
+  background: #2b2e4a;
+  opacity: 0.9;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#showcase .showcase-content {
+  padding-top: 230px;
+  color: #fff;
+  width: 70%;
+  margin: auto;
+}
+
+#section-1 h2 {
+  font-size: 18px;
+  color: black;
+}
+
+#section-1 .fa {
+  font-size: 50px;
+  margin-right: 10px;
+  color: blue;
+}
