--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,8 @@ code {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.card button {
+.card button,
+.add-to-card {
   border: none;
   outline: 0;
   padding: 12px;
@@ -83,8 +84,13 @@ code {
   font-size: 18px;
 }
 
-.card button:hover {
+.card button:hover,
+.add-to-card:hover {
   opacity: 0.7;
+}
+
+.add-to-card {
+  width: 160px;
 }
 
 #footer-section {
