--- a/src/index.css
+++ b/src/index.css
@@ -146,3 +146,12 @@ code {
   /* height: 100%; */
   background: rgba(0, 0, 0, 0.4);
 }
+
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
