--- a/src/index.css
+++ b/src/index.css
@@ -148,10 +148,17 @@ code {
 }
 
 .card-columns {
-  @include media-breakpoint-only(lg) {
-    column-count: 4;
+  column-count: 1;
+}
+
+@media (min-width: 768px) {
+  .card-columns {
+    column-count: 2;
   }
-  @include media-breakpoint-only(xl) {
-    column-count: 5;
+}
+
+@media (min-width: 992px) {
+  .card-columns {
+    column-count: 3;
   }
 }
